Fix hero image on mobile

--- a/app/css/_about.scss
+++ b/app/css/_about.scss
@@ -125,7 +125,7 @@
     }
 
     @media screen and (max-width: 1024px) {
-      min-width: 600px;
+      min-width: 390px;
       opacity: .45;
       width: 100%;
     }
